# notifyer

./: .gitignore  Cargo.toml  README.md  cross_compile.sh  daily_summary.rs  deploy  deploy.sh  hello.js  hello.wasm  hello3.c  hello3.html  hello3.js  hello3.wasm  memo.md  package.json
.cargo/: config.example.toml  config.toml
.github/workflows/: build.yml  daily_summary.yml  gh_pages.yml  hourly_notification.yml  main.yml  rust.yml  tests.yml  v2.yml
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/controllers/: mod.rs  notify.rs  summary.rs  summary_yesterday.rs
adapters/src/git/: git_repository.rs  mod.rs
adapters/src/git/constants/: endpoint.rs
adapters/src/git/queries/: mod.rs  single_day_comitted_repos.rs  single_day_contributions.rs
adapters/src/git/queries/schemas/: mod.rs
adapters/src/git/request_utils/: mod.rs  run_graphql_query.rs  run_query.rs  x_graphql_client.rs
adapters/src/git/schemas/: single_day_comitted_repos.rs  single_day_committed_repo.rs  single_day_contributions.rs
adapters/src/git/utils/: format_date.rs
adapters/src/github/: mod.rs
adapters/src/github/schemas/: single_day_committed_repo.rs  single_day_contributions.rs
adapters/src/github/utils/: mod.rs
adapters/src/infrastructure/: app_state.rs  mod.rs  notifyer.rs
adapters/src/messaging/: messaging_repository.rs  messaging_service.rs  mod.rs
adapters/src/presenters/: create_summary_message_body.rs  mod.rs  process_plural.rs  you_have_made_count_text.rs
adapters/src/presenters/notify/: mod.rs
adapters/src/presenters/summary/: create_summary_message_body.rs  mod.rs  you_have_made_count_text.rs
application/: Cargo.toml
application/src/: daily_summary.rs  lib.rs
application/src/domains/: application_error.rs  mod.rs
application/src/repositories/: git_repository_abstract.rs  message_repository_abstract.rs  messaging_repository_abstract.rs  mod.rs  time_repository_abstract.rs
application/src/usecases/: abstract_usecase.rs  mod.rs  notify_no_commit_usecase.rs  notify_summary_usecase.rs  notify_yesterday_summary_usecase.rs
application/src/utils/: messaging.rs
html_template/: shell_minimal.html
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  notifyer.rs
schemas/: Cargo.toml  README.md
schemas/src/: lib.rs
src/: app.rs  capitalize.rs  constants.rs  iterators.rs  iterators4.rs  lib.rs  main.rs  slack_notify.rs  structs.rs
src/adapters/slack/: mod.rs
src/application/: mod.rs  no_commit.rs
src/application/usecases/: abstract_usecase.rs  notify_no_commit_usecase.rs
src/controllers/: notify.rs
src/domain/: error.rs
src/features/: daily_summary.rs  mod.rs  no_commit.rs
src/interfaces/: message.rs
src/lib/: github.rs  mod.rs  slack.rs  user_contributions.graphql
src/lib/github/: github.rs
src/lib/graphql/: user_contributions.graphql
src/lib/slack/: mod.rs
src/repositories/: contribution_count_repository_abstract.rs  message_repository_abstract.rs  mod.rs
src/services/: github.rs
src/usecases/: get_contribution_count_usecase.rs  interfaces.rs  mod.rs  send_message_usecase.rs
src/utils/: github_user.rs  mod.rs  slack_notify.rs
(+26 files in other folders)
