[package]
name = "notifyer"
version = "2.0.0"
authors = ["stevenfukase <fukasesteven@gmail.com"]
edition = "2021"
description = "GitHub streak notifyer"
readme = "README.md"
repository = "https://github.com/stevenfukase/notifyer"

[workspace]
members = ["adapters", "application", "infrastructure"]

[dependencies]
infrastructure = { path = "./infrastructure" }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
