[package]
name = "notifyer"
version = "2.0.0"
authors = ["stevenfukase <fukasesteven@gmail.com"]
edition = "2021"
description = "GitHub streak notifyer"
readme = "README.md"
repository = "https://github.com/stevenfukase/notifyer"

[workspace]
members = ["adapters", "application", "infrastructure", "schemas"]

[dependencies]
infrastructure = { path = "./infrastructure" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[workspace.dependencies]
log = "0.4"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
