[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
async-trait = "0.1.67"
chrono = "0.4.19"
graphql_client = "0.12"
log = "0.4.0"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
