[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
async-trait = "0.1"
chrono = "0.4"
cynic = { version = "2", features = ["http-surf"] }
graphql_client = "0.12"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2"

[dev-dependencies]
insta = "1"
