[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
schemas = { path = "../schemas" }
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cynic = { version = "2", features = ["http-reqwest"] }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
